@@ -5,8 +5,7 @@ template:
   >>> grok.testing.grok(__name__)
   Traceback (most recent call last):
     ...
-  ConfigurationExecutionError: martian.error.GrokError: View <class 'grokcore.view.tests.view.templatenotfound.Painting'>
-  has no associated template or 'render' method.
+  ConfigurationExecutionError: martian.error.GrokError: Template cavepainting for View <class 'grokcore.view.tests.view.templatenotfound.Painting'> cannot be found.
   in:
 """
 import grokcore.view as grok
